syntax = "proto3";

package dslpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/dslpb";

// ============================================================
// Data structures
// ============================================================

message Origin {
  uint64 contextID = 1;
}


